Migrating from Runtime.exec to ProcessBuilder for JettyDistro in order to make directories with spaces work